--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,10 +15,28 @@ body {
   --landing-padding: 7vw;
   --dark: #263949;
   --light: #444444;
+  --primary: #007bff;
+  --warning: #f3c23d;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.btn {
+  padding: 0.5rem 1.5rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background: var(--primary);
+  color: white;
+}
+.btn-warning {
+  background: var(--warning);
+  color: white;
 }
