--- a/client/src/components/Landing/Header/Header.css
+++ b/client/src/components/Landing/Header/Header.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: var(--dark);
+  color: var(--main-dark);
 }
 
 .header__logo img {
