--- a/client/src/components/Search/Cities/Cities.css
+++ b/client/src/components/Search/Cities/Cities.css
@@ -23,6 +23,10 @@
   text-align: center;
 }
 
+.city__name__active {
+  color: #2dddd7;
+}
+
 @media screen and (max-width: 768px) {
   .cities {
     display: grid;
